# continuous-verification

.cloudbees/workflows/: ci.yaml
base/: README.adoc  action.yml
cli/: .dockerignore  Dockerfile  Makefile  pyproject.toml
cli/cv/: __init__.py  http_client.py  main.py  models.py  verifier.py
cli/tests/: __init__.py  mock_prometheus.py  test-error-rate.yaml  test-immediate-pass.yaml  test-multi-check.yaml  test_integration.py  test_verifier.py
prometheus/: README.adoc  action.yml
