[project]
name = "cv"
version = "0.1.0"
description = "Continuous Verification CLI for metrics monitoring"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.7.0",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
cv = "cv.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-httpx>=0.35.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "standard"
